--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
     "negotiator": "^0.6.3",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
@@ -96,6 +97,7 @@
     "to-regex-range": "^5.0.1",
     "toidentifier": "^1.0.1",
     "touch": "^3.1.0",
+    "twilio": "^4.14.1",
     "type-is": "^1.6.18",
     "undefsafe": "^2.0.5",
     "unpipe": "^1.0.0",
